[package]
name = "cdbpatch"
version = "0.1.0"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { git = "https://github.com/clap-rs/clap.git" }
lazy_static = "1.4"
rayon = "1.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellwords = "1.1"
